[gd_scene format=3 uid="uid://bn4rk4ufqq05h"]

[ext_resource type="Script" uid="uid://dhudo2n2y4n6w" path="res://addons/diablohumastudio/database_manager/ui/data_instance_editor/data_instance_editor.gd" id="1_ugsc3"]

[node name="DataInstanceEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ugsc3")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Toolbar"]
layout_mode = 2
text = "Data Type:"

[node name="TypeSelector" type="OptionButton" parent="VBox/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddInstanceBtn" type="Button" parent="VBox/Toolbar"]
layout_mode = 2
text = "Add Instance"

[node name="DeleteInstanceBtn" type="Button" parent="VBox/Toolbar"]
layout_mode = 2
text = "Delete Selected"

[node name="Sep1" type="VSeparator" parent="VBox/Toolbar"]
layout_mode = 2

[node name="BulkEditBtn" type="MenuButton" parent="VBox/Toolbar"]
layout_mode = 2
text = "Bulk Edit"

[node name="Sep2" type="VSeparator" parent="VBox/Toolbar"]
layout_mode = 2

[node name="SaveAllBtn" type="Button" parent="VBox/Toolbar"]
layout_mode = 2
text = "Save All"

[node name="RefreshBtn" type="Button" parent="VBox/Toolbar"]
layout_mode = 2
text = "Refresh"

[node name="InstanceTree" type="Tree" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
column_titles_visible = true
hide_root = true
select_mode = 2

[node name="StatusBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBox/StatusBar"]
layout_mode = 2
text = "Ready"
